src/parse/snapshots/blis__parse__lexer__tests__test_programs__objects.blis.tokens.snap
---
source: src/parse/lexer.rs
description: "func main() {\n    let one = Counter.new(\"uno\");\n    let two = Counter.new(\"dos\");\n\n    println(one);\n    println(one.id, one.name);\n\n    println(two);\n    println(two.id, two.name);\n\n    // Eventually, gradual typing will let you prevent this. But for now...\n    one.two = two;\n    two.one = one;\n\n    println(one.two);\n    println(one[\"two\"]);\n    println(two.one);\n    println(two[\"one\"]);\n\n    println(Counter.new);\n    println(one.incr);\n    println(one.add);\n    println(two.incr);\n    println(two.add);\n}\n\nlet id = 0;\n\ntype Counter with {\n    func new(name) {\n        id = id + 1;\n\n        Counter {\n            id = id,\n            name = name,\n            count = 0,\n        }\n    }\n\n    func self.incr() {\n        self.add(1);\n    }\n\n    func self.add(delta) {\n        self.count = self.count + delta;\n    }\n}\n\nmain();\n"
input_file: test_programs/objects.blis
---
[
  Lexeme(
    token: Func,
    text: "func",
    line: 1,
  ),
  Lexeme(
    token: Identifier,
    text: "main",
    line: 1,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 1,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 1,
  ),
  Lexeme(
    token: LeftBrace,
    text: "{",
    line: 1,
  ),
  Lexeme(
    token: Let,
    text: "let",
    line: 2,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 2,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 2,
  ),
  Lexeme(
    token: Identifier,
    text: "Counter",
    line: 2,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 2,
  ),
  Lexeme(
    token: Identifier,
    text: "new",
    line: 2,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 2,
  ),
  Lexeme(
    token: String,
    text: "\"uno\"",
    line: 2,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 2,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 2,
  ),
  Lexeme(
    token: Let,
    text: "let",
    line: 3,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 3,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 3,
  ),
  Lexeme(
    token: Identifier,
    text: "Counter",
    line: 3,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 3,
  ),
  Lexeme(
    token: Identifier,
    text: "new",
    line: 3,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 3,
  ),
  Lexeme(
    token: String,
    text: "\"dos\"",
    line: 3,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 3,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 3,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 5,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 5,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 5,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 5,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 5,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 6,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 6,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 6,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 6,
  ),
  Lexeme(
    token: Identifier,
    text: "id",
    line: 6,
  ),
  Lexeme(
    token: Comma,
    text: ",",
    line: 6,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 6,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 6,
  ),
  Lexeme(
    token: Identifier,
    text: "name",
    line: 6,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 6,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 6,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 8,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 8,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 8,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 8,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 8,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 9,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 9,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 9,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 9,
  ),
  Lexeme(
    token: Identifier,
    text: "id",
    line: 9,
  ),
  Lexeme(
    token: Comma,
    text: ",",
    line: 9,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 9,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 9,
  ),
  Lexeme(
    token: Identifier,
    text: "name",
    line: 9,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 9,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 9,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 12,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 12,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 12,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 12,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 12,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 12,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 13,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 13,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 13,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 13,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 13,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 13,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 15,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 15,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 15,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 15,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 15,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 15,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 15,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 16,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 16,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 16,
  ),
  Lexeme(
    token: LeftBracket,
    text: "[",
    line: 16,
  ),
  Lexeme(
    token: String,
    text: "\"two\"",
    line: 16,
  ),
  Lexeme(
    token: RightBracket,
    text: "]",
    line: 16,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 16,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 16,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 17,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 17,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 17,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 17,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 17,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 17,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 17,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 18,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 18,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 18,
  ),
  Lexeme(
    token: LeftBracket,
    text: "[",
    line: 18,
  ),
  Lexeme(
    token: String,
    text: "\"one\"",
    line: 18,
  ),
  Lexeme(
    token: RightBracket,
    text: "]",
    line: 18,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 18,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 18,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 20,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 20,
  ),
  Lexeme(
    token: Identifier,
    text: "Counter",
    line: 20,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 20,
  ),
  Lexeme(
    token: Identifier,
    text: "new",
    line: 20,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 20,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 20,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 21,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 21,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 21,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 21,
  ),
  Lexeme(
    token: Identifier,
    text: "incr",
    line: 21,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 21,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 21,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 22,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 22,
  ),
  Lexeme(
    token: Identifier,
    text: "one",
    line: 22,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 22,
  ),
  Lexeme(
    token: Identifier,
    text: "add",
    line: 22,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 22,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 22,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 23,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 23,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 23,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 23,
  ),
  Lexeme(
    token: Identifier,
    text: "incr",
    line: 23,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 23,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 23,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 24,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 24,
  ),
  Lexeme(
    token: Identifier,
    text: "two",
    line: 24,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 24,
  ),
  Lexeme(
    token: Identifier,
    text: "add",
    line: 24,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 24,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 24,
  ),
  Lexeme(
    token: RightBrace,
    text: "}",
    line: 25,
  ),
  Lexeme(
    token: Let,
    text: "let",
    line: 27,
  ),
  Lexeme(
    token: Identifier,
    text: "id",
    line: 27,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 27,
  ),
  Lexeme(
    token: Integer,
    text: "0",
    line: 27,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 27,
  ),
  Lexeme(
    token: Type,
    text: "type",
    line: 29,
  ),
  Lexeme(
    token: Identifier,
    text: "Counter",
    line: 29,
  ),
  Lexeme(
    token: With,
    text: "with",
    line: 29,
  ),
  Lexeme(
    token: LeftBrace,
    text: "{",
    line: 29,
  ),
  Lexeme(
    token: Func,
    text: "func",
    line: 30,
  ),
  Lexeme(
    token: Identifier,
    text: "new",
    line: 30,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 30,
  ),
  Lexeme(
    token: Identifier,
    text: "name",
    line: 30,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 30,
  ),
  Lexeme(
    token: LeftBrace,
    text: "{",
    line: 30,
  ),
  Lexeme(
    token: Identifier,
    text: "id",
    line: 31,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 31,
  ),
  Lexeme(
    token: Identifier,
    text: "id",
    line: 31,
  ),
  Lexeme(
    token: Plus,
    text: "+",
    line: 31,
  ),
  Lexeme(
    token: Integer,
    text: "1",
    line: 31,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 31,
  ),
  Lexeme(
    token: Identifier,
    text: "Counter",
    line: 33,
  ),
  Lexeme(
    token: LeftBrace,
    text: "{",
    line: 33,
  ),
  Lexeme(
    token: Identifier,
    text: "id",
    line: 34,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 34,
  ),
  Lexeme(
    token: Identifier,
    text: "id",
    line: 34,
  ),
  Lexeme(
    token: Comma,
    text: ",",
    line: 34,
  ),
  Lexeme(
    token: Identifier,
    text: "name",
    line: 35,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 35,
  ),
  Lexeme(
    token: Identifier,
    text: "name",
    line: 35,
  ),
  Lexeme(
    token: Comma,
    text: ",",
    line: 35,
  ),
  Lexeme(
    token: Identifier,
    text: "count",
    line: 36,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 36,
  ),
  Lexeme(
    token: Integer,
    text: "0",
    line: 36,
  ),
  Lexeme(
    token: Comma,
    text: ",",
    line: 36,
  ),
  Lexeme(
    token: RightBrace,
    text: "}",
    line: 37,
  ),
  Lexeme(
    token: RightBrace,
    text: "}",
    line: 38,
  ),
  Lexeme(
    token: Func,
    text: "func",
    line: 40,
  ),
  Lexeme(
    token: Self_,
    text: "self",
    line: 40,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 40,
  ),
  Lexeme(
    token: Identifier,
    text: "incr",
    line: 40,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 40,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 40,
  ),
  Lexeme(
    token: LeftBrace,
    text: "{",
    line: 40,
  ),
  Lexeme(
    token: Self_,
    text: "self",
    line: 41,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 41,
  ),
  Lexeme(
    token: Identifier,
    text: "add",
    line: 41,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 41,
  ),
  Lexeme(
    token: Integer,
    text: "1",
    line: 41,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 41,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 41,
  ),
  Lexeme(
    token: RightBrace,
    text: "}",
    line: 42,
  ),
  Lexeme(
    token: Func,
    text: "func",
    line: 44,
  ),
  Lexeme(
    token: Self_,
    text: "self",
    line: 44,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 44,
  ),
  Lexeme(
    token: Identifier,
    text: "add",
    line: 44,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 44,
  ),
  Lexeme(
    token: Identifier,
    text: "delta",
    line: 44,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 44,
  ),
  Lexeme(
    token: LeftBrace,
    text: "{",
    line: 44,
  ),
  Lexeme(
    token: Self_,
    text: "self",
    line: 45,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 45,
  ),
  Lexeme(
    token: Identifier,
    text: "count",
    line: 45,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 45,
  ),
  Lexeme(
    token: Self_,
    text: "self",
    line: 45,
  ),
  Lexeme(
    token: Dot,
    text: ".",
    line: 45,
  ),
  Lexeme(
    token: Identifier,
    text: "count",
    line: 45,
  ),
  Lexeme(
    token: Plus,
    text: "+",
    line: 45,
  ),
  Lexeme(
    token: Identifier,
    text: "delta",
    line: 45,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 45,
  ),
  Lexeme(
    token: RightBrace,
    text: "}",
    line: 46,
  ),
  Lexeme(
    token: RightBrace,
    text: "}",
    line: 47,
  ),
  Lexeme(
    token: Identifier,
    text: "main",
    line: 49,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 49,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 49,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 49,
  ),
  Lexeme(
    token: Eof,
    text: "",
    line: 50,
  ),
]
